新增evaluation可以选择分布式计算
