# models/modelset.go
@@ -20,17 +20,17 @@ type Modelset struct {
 	Status      string `json:"status"`
 	Size        int64  `gorm:"type bigint(20)" json:"size"`
 	//模型类型 图像分类
-	Use         string `json:"use"`
-	JobId       string `json:"jobId"`
-	DataFormat  string `json:"dataFormat"`
+	Use        string `json:"use"`
+	JobId      string `json:"jobId"`
+	DataFormat string `json:"dataFormat"`
 	//Dataset     string `json:"dataset"`
 	DatasetName string `json:"datasetName"`
 	DatasetPath string `json:"datasetPath"`
 	//omitempty 值为空，不编码
-	Params  *ParamsItem `gorm:"type:text" json:"params"`
-	Engine string         `json:"engine"`
-	Precision  string         `json:"precision"`
-	IsAdvance  bool           `json:"isAdvance"`
+	Params    *ParamsItem `gorm:"type:text" json:"params"`
+	Engine    string      `json:"engine"`
+	Precision string      `json:"precision"`
+	IsAdvance bool        `json:"isAdvance"`
 	//模型路径
 	CodePath string `json:"codePath"`
 	//指定的模型参数路径
@@ -43,13 +43,12 @@ type Modelset struct {
 	EvaluationId string `json:"evaluationId"`
 	// 评估设备类型
 	DeviceType string `json:"deviceType"`
-	DeviceNum int `json:"deviceNum"`
-
+	DeviceNum  int    `json:"deviceNum"`
 }
 
 type ParamsItem map[string]string
 
-func ListModelSets(offset, limit int, orderBy, order string, isAdvance bool, name, status, username string) ([]Modelset, int, error) {
+func ListModelSets(offset, limit int, orderBy, order string, isAdvance bool, name, status, use, username string) ([]Modelset, int, error) {
 	var modelsets []Modelset
 	total := 0
 
@@ -58,12 +57,14 @@ func ListModelSets(offset, limit int, orderBy, order string, isAdvance bool, nam
 		whereQueryStr = fmt.Sprintf(" is_advance = 1 ")
 	}
 	if name != "" {
-		whereQueryStr +=  "and name like '%"+ name + "%' "
+		whereQueryStr += "and name like '%" + name + "%' "
 	}
 	if status != "" {
 		whereQueryStr += fmt.Sprintf("and status='%s' ", status)
 	}
-
+	if use != "" {
+		whereQueryStr += "and use like '%" + use + "%' "
+	}
 	orderQueryStr := fmt.Sprintf("%s %s ", CamelToCase(orderBy), order)
 	res := db.Offset(offset).Limit(limit).Order(orderQueryStr).Where(whereQueryStr).Find(&modelsets)
 
