# routers/modelset.go
@@ -4,10 +4,12 @@ import (
 	"github.com/apulis/AIArtsBackend/models"
 	"github.com/apulis/AIArtsBackend/services"
 	"github.com/gin-gonic/gin"
+	"strings"
 )
 
 func AddGroupModel(r *gin.Engine) {
 	group := r.Group("/ai_arts/api/models/")
+	group.GET("/:id/panel", wrapper(getPanel))
 	group.Use(Auth())
 	group.GET("/", wrapper(lsModelsets))
 	group.GET("/:id", wrapper(getModelset))
@@ -20,15 +22,17 @@ func AddGroupModel(r *gin.Engine) {
 type modelsetId struct {
 	ID int `uri:"id" binding:"required"`
 }
+
 type createEvaluationResp struct {
 	EvaluationId string `json:"jobId"`
 }
 
 type lsModelsetsReq struct {
-	PageNum   int    `form:"pageNum"`
-	PageSize  int    `form:"pageSize,default=10"`
-	Name      string `form:"name"`
+	PageNum  int    `form:"pageNum"`
+	PageSize int    `form:"pageSize,default=10"`
+	Name     string `form:"name"`
 	//all
+	Use       string `json:"use"`
 	Status    string `form:"status"`
 	IsAdvance bool   `form:"isAdvance"`
 	OrderBy   string `form:"orderBy,default=created_at"`
@@ -39,24 +43,30 @@ type createModelsetReq struct {
 	Name        string `json:"name" binding:"required"`
 	Description string `json:"description" `
 	JobId       string `json:"jobId"`
-	CodePath   string `json:"codePath"`
+	CodePath    string `json:"codePath"`
 	ParamPath   string `json:"paramPath" binding:"required"`
-	IsAdvance bool   `json:"isAdvance,default=false"`
+	IsAdvance   bool   `json:"isAdvance,default=false"`
 
-	Use   string `json:"use"`
-	Size   int64 `json:"size"`
+	Use         string `json:"use"`
+	Size        int64  `json:"size"`
 	DataFormat  string `json:"dataFormat"`
 	DatasetName string `json:"datasetName"`
 	DatasetPath string `json:"datasetPath"`
 	//omitempty 值为空，不编码
-	Params  map[string]string `json:"params"`
-	Engine string         `json:"engine"`
-	Precision  string         `json:"precision"`
+	Params    map[string]string `json:"params"`
+	Engine    string            `json:"engine"`
+	Precision string            `json:"precision"`
 	//指定的模型参数路径
 	// 输出文件路径
 	OutputPath string `json:"outputPath"`
 	//启动文件路径
 	StartupFile string `json:"startupFile"`
+
+	//用于可视化建模平台直接启动训练任务
+	NumPs       int    `json:"numPs"`
+	NumPsWorker int    `json:"numPsWorker"`
+	DeviceType  string `json:"deviceType"`
+	DeviceNum   int    `json:"deviceNum"`
 }
 
 type updateModelsetReq struct {
@@ -95,7 +105,7 @@ func lsModelsets(c *gin.Context) error {
 	if len(username) == 0 {
 		return AppError(NO_USRNAME, "no username")
 	}
-	modelsets, total, err = services.ListModelSets(req.PageNum, req.PageSize, req.OrderBy, req.Order, req.IsAdvance, req.Name, req.Status, username)
+	modelsets, total, err = services.ListModelSets(req.PageNum, req.PageSize, req.OrderBy, req.Order, req.IsAdvance, req.Name, req.Status, req.Use, username)
 	if err != nil {
 		return AppError(APP_ERROR_CODE, err.Error())
 	}
@@ -107,6 +117,32 @@ func lsModelsets(c *gin.Context) error {
 		PageSize:  req.PageSize,
 		TotalPage: total/req.PageSize + 1,
 	}
+	return SuccessResp(c, data)
+}
+
+// @Summary get visualis panel
+// @Produce  json
+// @Param string use string true "cls det seg"
+// @Success 200 {object} getModelsetResp "success"
+// @Failure 400 {object} APIException "error"
+// @Failure 404 {object} APIException "not found"
+// @Router /ai_arts/api/models/:id [get]
+func getPanel(c *gin.Context) error {
+	var id int
+	err := c.ShouldBindUri(&id)
+	if err != nil {
+		return ParameterError(err.Error())
+	}
+	//username := getUsername(c)
+	username:="admin"
+	if len(username) == 0 {
+		return AppError(NO_USRNAME, "no username")
+	}
+	panel, err := services.GetPanel(id,username)
+	if err != nil {
+		return AppError(APP_ERROR_CODE, err.Error())
+	}
+	data := gin.H{"panel": panel}
 	return SuccessResp(c, data)
 }
 
@@ -144,6 +180,7 @@ func createModelset(c *gin.Context) error {
 	if err != nil {
 		return ParameterError(err.Error())
 	}
+
 	//如果上传模型文件检查模型文件是否存在
 	if req.CodePath != "" {
 		err = services.CheckPathExists(req.CodePath)
@@ -151,18 +188,44 @@ func createModelset(c *gin.Context) error {
 			return AppError(FILEPATH_NOT_EXISTS_CODE, err.Error())
 		}
 	}
-	//检查模型参数文件是否存在
-	err = services.CheckPathExists(req.ParamPath)
-	if err != nil {
-		return AppError(FILEPATH_NOT_EXISTS_CODE, err.Error())
+	if req.ParamPath != "" {
+		//检查模型参数文件是否存在
+		err = services.CheckPathExists(req.ParamPath)
+		if err != nil {
+			return AppError(FILEPATH_NOT_EXISTS_CODE, err.Error())
+		}
 	}
+
 	username := getUsername(c)
 	if len(username) == 0 {
 		return AppError(NO_USRNAME, "no username")
 	}
-
-	err = services.CreateModelset(req.Name, req.Description, username, "0.0.1", req.JobId, req.CodePath, req.ParamPath,req.IsAdvance,
-		req.Use,req.Size,req.DataFormat,req.DatasetName,req.DatasetPath,req.Params,req.Engine,req.Precision,req.OutputPath,req.StartupFile)
+	//如果是可视化建模平台直接创建
+	if strings.Index(req.Use, "Avisualis") != 1 {
+		req.StartupFile="/data/premodel/code/ApulisVision/tools/train"
+		training := models.Training{
+			Id:          req.JobId,
+			Name:        req.Name,
+			Engine:      req.Engine,
+			CodePath:    req.CodePath,
+			StartupFile: req.StartupFile,
+			OutputPath:  req.OutputPath,
+			DatasetPath: req.DatasetPath,
+			Params:      req.Params,
+			Desc:        req.Description,
+			NumPs:       req.NumPs,
+			NumPsWorker: req.NumPsWorker,
+			DeviceType:  req.DeviceType,
+			DeviceNum:   req.DeviceNum,
+		}
+		jobId, err := services.CreateTraining(username, training)
+		if err != nil {
+			return AppError(FAILED_START_TRAINING, err.Error())
+		}
+		req.JobId = jobId
+	}
+	err = services.CreateModelset(req.Name, req.Description, username, "0.0.1", req.JobId, req.CodePath, req.ParamPath, req.IsAdvance,
+		req.Use, req.Size, req.DataFormat, req.DatasetName, req.DatasetPath, req.Params, req.Engine, req.Precision, req.OutputPath, req.StartupFile)
 	if err != nil {
 		return AppError(APP_ERROR_CODE, err.Error())
 	}
